<resources>
    <string name="app_name">App Curso Android</string>
    <string name="titulo_detalle_gasto">Detalle gasto</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_actualiza_gastos">Editar gasto</string>
    <string name="titulo_registro_gastos">Registro gasto</string>
    <string name="fecha">fecha:dd/mm/aaaa</string>
    <string name="medio_transporte">medio transporte</string>
    <string name="kilometraje">kilometraje</string>
    <string name="precio_km">Precio km</string>
    <string name="peaje">peaje</string>
    <string name="parking">parking</string>
    <string name="comida">comida</string>
    <string name="otros_conceptos">otros conceptos</string>
    <string name="proyecto">proyecto</string>
    <string name="departamento">departamento</string>
    <string name="total">total</string>
    <string name="borrar">borrar</string>
    <string name="actualizar">actualizar</string>
    <string name="listado_gastos">Listado gastos</string>
    <string name="inicio">Inicio</string>
    <string name="activar_europea">activar europea</string>
    <string name="activar_internacional">activar internacional</string>
    <string name="info_tarjetas">información tarjetas</string>
    <string name="activar_tarjeta">Gestión tarjetas</string>
    <string name="enviar">Enviar</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="intro_texto">Aplicación de gestión de gastos de viaje de</string>
    <string name="maristak">Maristak</string>
    <string name="editar">editar</string>
    <string name="buscar_gastos">Consulta gastos</string>
    <string name="fecha_desde">desde fecha:dd/mm/aaaa</string>
    <string name="fecha_hasta">hasta fecha:dd/mm/aaaa</string>
    <string name="importe_desde">desde importe</string>
    <string name="importe_hasta">hasta importe</string>
    <string name="listado_dietas">Listado dietas</string>
    <string name="buscar_dietas">Consulta dietas</string>
    <string name="et_start_date_dieta">fecha inicio</string>
    <string name="et_end_date_dieta">fecha fin</string>
    <string name="et_country">pais</string>
    <string name="et_city">ciudad</string>
    <string name="et_project_dieta">proyecto</string>
    <string name="et_department_dieta">departamento</string>
    <string name="tv_total_dieta">total</string>
    <string name="et_dieta">dieta</string>
    <string name="titulo_registro_dietas">Registro dieta</string>
    <string name="titulo_actualiza_dietas">Editar dieta</string>
    <string name="titulo_detalle_dieta">Detalle dieta</string>
    <string name="et_total_dieta">Total</string>
    <string name="info_usuario">Info usuario</string>
    <string name="informacion_del_usuario">Información del usuario</string>
    <string name="volver_a_inicio">Volver a inicio</string>
    <string name="listado_de_gastos">Listado de gastos</string>
    <string name="consultar_gastos">Consultar gastos</string>
    <string name="listado_de_dietas">Listado de dietas</string>
    <string name="consultar_dietas">Consultar dietas</string>
    <string name="gestionar_el_uso_de_las_tarjetas">Gestionar el uso de las tarjetas</string>
    <string name="configuracion_de_la_aplicacion">Configuración de la aplicación</string>
    <string name="configuracion">Configuración</string>
    <string name="informacion_de_la_version">Informacion de la version</string>
    <string name="acerca_de">Acerca de</string>
    <string name="gasto">gasto</string>
    <string name="nuevo_gasto">Nuevo gasto</string>
    <string name="llamada">llamada</string>
    <string name="ayuda_telefonica">Ayuda telefonica</string>
    <string name="dieta">dieta</string>
    <string name="nueva_dieta">Nueva dieta</string>
    <string name="tarjeta_europea">Tarjeta Europea</string>
    <string name="europe">EUROPE</string>
    <string name="tarjeta_internacional">tarjeta internacional</string>
    <string name="international">INTERNATIONAL</string>
    <string name="ltima_activacion">Última activación:</string>
    <string name="icono_de_maristak">Icono de Maristak Ikastetxea Durango</string>
    <string name="foto_del_usuario">Foto del usuario</string>
    <string name="nombre_y_apellido">Nombre y apellido</string>
    <string name="dni">DNI</string>
    <string name="ltima_conexi_n">Última conexión</string>
    <string name="dominio">http://10.0.2.2:4000</string>


</resources>
