<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btm_gasto"
        android:title="@string/gasto"
        android:enabled="true"
        android:icon="@drawable/ic_gastos"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/nuevo_gasto"/>
    <item
        android:id="@+id/btm_llamar"
        android:title="@string/llamada"
        android:enabled="true"
        android:icon="@drawable/ic_phone"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/ayuda_telefonica"/>

    <item
        android:id="@+id/btm_dieta"
        android:title="@string/dieta"
        android:enabled="true"
        android:icon="@drawable/ic_dietas"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/nueva_dieta"/>


</menu>