<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.FormularioGastoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ly_date_gasto"
                style="@style/InputNumber"
                android:hint="@string/fecha">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_date_gasto"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWrapper"
                android:hint="@string/medio_transporte">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_transport"
                    style="@style/InputNumber"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWrapper"
                android:hint="@string/kilometraje">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_kilometers"
                    style="@style/InputNumber"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWrapper"
                android:hint="@string/precio_km">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_km_price"
                    style="@style/InputNumber"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWrapper"
                android:hint="@string/peaje">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_toll"
                    style="@style/InputNumber"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWrapper"
                android:hint="@string/parking">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_parking"
                    style="@style/InputNumber"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWrapper"
                android:hint="@string/comida">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_food"
                    style="@style/InputNumber"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWrapper"
                android:hint="@string/otros_conceptos">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_other"
                    style="@style/InputNumber"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWrapper"
                android:hint="@string/proyecto">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_project_gasto"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWrapper"
                android:hint="@string/departamento">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_department_gasto"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputTextWrapper"
                android:hint="@string/total">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_total_gasto"
                    style="@style/InputNumber"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>