<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.FormularioDietaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ly_start_date_dieta"
                style="@style/InputTextWrapper"
                android:hint="@string/et_start_date_dieta">

                <EditText
                    android:id="@+id/et_start_date_dieta"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ly_end_date_dieta"
                style="@style/InputTextWrapper"
                android:hint="@string/et_end_date_dieta">

                <EditText
                    android:id="@+id/et_end_date_dieta"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:gravity="center|center_horizontal|center_vertical"
                android:paddingTop="12dp"
                android:paddingBottom="2dp"
                app:ccp_showFullName="true"
                app:ccp_showNameCode="true"
                app:ccp_showPhoneCode="false" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ly_city"
                style="@style/InputTextWrapper"
                android:hint="@string/et_city">

                <EditText
                    android:id="@+id/et_city"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ly_project_dieta"
                style="@style/InputTextWrapper"
                android:hint="@string/et_project_dieta">

                <EditText
                    android:id="@+id/et_project_dieta"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ly_department_dieta"
                style="@style/InputTextWrapper"
                android:hint="@string/et_department_dieta">

                <EditText
                    android:id="@+id/et_department_dieta"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ly_dieta"
                style="@style/InputTextWrapper"
                android:hint="@string/et_dieta">

                <EditText
                    android:id="@+id/et_dieta"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ly_total_dieta"
                style="@style/InputTextWrapper"
                android:hint="@string/et_total_dieta">

                <EditText
                    android:id="@+id/et_total_dieta"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bt_enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="enviar"
                style="@style/Widget.MaterialComponents.Button" />
        </LinearLayout>

    </ScrollView>


</FrameLayout>