<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.FiltroFragment">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputTextWrapper"
            android:layout_marginTop="20dp"
            android:hint="@string/fecha_desde">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fecha_desde"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputTextWrapper"
            android:layout_marginTop="20dp"
            android:hint="@string/fecha_hasta">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fecha_hasta"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputTextWrapper"
            android:layout_marginTop="20dp"
            android:hint="@string/importe_desde">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_importe_desde"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputTextWrapper"
            android:layout_marginTop="20dp"
            android:hint="@string/importe_hasta">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_importe_hasta"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>