<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewModel"
            type="com.example.appcursoandroidv2.ui.login.LoginViewModel"/>
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_login2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_login"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/login_menu"
                app:navigationIcon="@drawable/ic_maristak" />

        </com.google.android.material.appbar.AppBarLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itl_nombre"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:hint="@string/nombre_usuario"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:duplicateParentState="false"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:addTextChangedListener="@{viewModel.nombreTextWatcher}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itl_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/contraseña"
                app:layout_constraintEnd_toEndOf="@+id/itl_nombre"
                app:layout_constraintStart_toStartOf="@+id/itl_nombre"
                app:layout_constraintTop_toBottomOf="@+id/itl_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    app:addTextChangedListener="@{viewModel.passwordTextWatcher}" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tv_login_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:textColor="#FA0202"
                app:layout_constraintEnd_toEndOf="@+id/itl_pass"
                app:layout_constraintStart_toStartOf="@+id/itl_pass"
                app:layout_constraintTop_toBottomOf="@+id/itl_pass" />

            <Button
                android:id="@+id/bt_send_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="@{viewModel::onLoginBtnClick}"
                android:text="@string/enviar"
                app:layout_constraintEnd_toEndOf="@+id/itl_nombre"
                app:layout_constraintStart_toStartOf="@+id/itl_nombre"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_error" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>